# CGGS-CW0

./: .gitignore  README.md
code/: CMakeLists.txt
code/grading21/: CMakeLists.txt  main.cpp
code/grading22/: CMakeLists.txt  main.cpp
code/grading3/: CMakeLists.txt  main.cpp
code/include/: compute_areas_normals.h  create_edge_list.h  harmonic_interpolation.h
code/section11/: CMakeLists.txt  main.cpp
code/section12/: CMakeLists.txt  main.cpp
code/section21/: CMakeLists.txt  main.cpp
code/section22/: CMakeLists.txt  main.cpp
code/section3/: CMakeLists.txt  main.cpp
code/section4/: CMakeLists.txt  main.cpp
data/: 3holes-section21.data  3holes-section22.data  3holes-section3.data  Bunny-section21.data  Bunny-section22.data  Bunny-section3.data  Flat-section21.data  Flat-section22.data  Flat-section3.data  Kitten-section21.data  Kitten-section22.data  Kitten-section3.data  TrainStation-section21.data  TrainStation-section22.data  TrainStation-section3.data  TrainStation.off  aqua-center-section21.data  aqua-center-section22.data  aqua-center-section3.data  arm-section21.data  arm-section22.data  arm-section3.data  arm.off  armadillo-section21.data  armadillo-section22.data  armadillo-section3.data  armadillo.off  botijo-section21.data  botijo-section22.data  botijo-section3.data  bumpy-cube-section21.data  bumpy-cube-section22.data  bumpy-cube-section3.data  camelhead-section21.data  camelhead-section22.data  camelhead-section3.data  cheburashka-section21.data  cheburashka-section22.data  cheburashka-section3.data  cow-section21.data  (+57 more)
